[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/module_name/*.so",
  "src/module_name/*.dylib",
  "src/module_name/*.dll",
  "src/module_name/**/*.py",
  "src/module_name"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "module_name"
requires-python = ">=3.9"
dependencies = [
	"typing",
	"argparse",
	"pytest>=8.4.0"
]
description = "Template for creating python projects"
version = "0.0.0"
