[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/tinybloat/*.so",
  "src/tinybloat/*.dylib",
  "src/tinybloat/*.dll",
  "src/tinybloat/**/*.py",
  "src/tinybloat"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "tinybloat"
requires-python = ">=3.9"
dependencies = [
	"typing",
	"argparse",
	"pytest>=8.4.0",
	"pdoc",
	"gguf",
	"gadget-ml",
	"safetensors"
]
description = "Extended functionality for tinygrad"
version = "0.0.3"
